docs/fix: add links, fix homepage link
For https://github.com/liammulh/lemur.css/issues/1.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "keywords": ["CSS", "classless", "stylesheet"],
   "version": "0.1.2",
   "author": "Liam Mulhall <liammulh@gmail.com>",
-  "homepage": "https://github.com/liammulh/lemur.css",
+  "homepage": "https://liammulh.github.io/lemur.css",
   "repository": {
     "type": "git",
     "url": "https://github.com/liammulh/lemur.css"
